fix(PartView): fix long names not always wrapping as expected

--- a/apps/app/src/react/styles/part.scss
+++ b/apps/app/src/react/styles/part.scss
@@ -120,6 +120,8 @@
 			display: flex;
 			flex-direction: column;
 			flex-grow: 1;
+			flex-shrink: 1;
+			min-width: 0;
 		}
 
 		&__right {
